Update banners, responsiveness edits, fix modal on mobile resolution

--- a/src/components/Button/index.scss
+++ b/src/components/Button/index.scss
@@ -43,5 +43,9 @@
       background-color: transparent;
       color: $purple75;
     }
+
+    &:disabled {
+      background-color: transparent;
+    }
   }
 }
