--- a/src/components/Footer/components/steps.scss
+++ b/src/components/Footer/components/steps.scss
@@ -3,9 +3,10 @@
 .phase {
   display: flex;
   justify-content: space-between;
+  width: 100%;
 
   &__content {
-    max-width: 565px;
+    max-width: calc(50% - 20px);
     margin-right: 20px;
 
     &-icon {
@@ -35,11 +36,12 @@
   }
 
   &__video-tour {
+    justify-content: center;
     display: flex;
     flex-wrap: wrap;
     margin-left: 20px;
     margin-top: 25px;
-    width: 565px;
+    width: 100%;
 
     .image-placeholder {
       width: 565px;
@@ -82,6 +84,7 @@
     &__video-tour {
       max-width: 100%;
       margin-left: 0;
+      margin-top: 80px;
 
       &-content {
         width: 100%;
